various z-index fixes, including fix to position organization close buttons above tooltip
git-svn-id: http://svn.localprojects.net/gam2@889 befef031-aaeb-48d0-b70f-681328309d3d

--- a/trunk/static/css/tc.gam.main.css
+++ b/trunk/static/css/tc.gam.main.css
@@ -48,7 +48,7 @@ h3{ font-size:14px; }
 
 /* top bar */
 div.atmosphere{ width:100%; background-color:#231f20; height: 46px; }
-div.atmosphere .stratosphere{ width:960px; margin:0 auto; position: relative; z-index: 99999;}
+div.atmosphere .stratosphere{ width:960px; margin:0 auto; position: relative; z-index: 999;}
 
 ul.navbar { height: 46px; display: block; color: #c9b577; font-size: 14px; line-height: 1; }
 ul.navbar a { text-transform: uppercase; color: #c9b577; font-weight: bold; font-size: 14px; line-height: 1; }
@@ -538,7 +538,7 @@ OTHER GLOBAL ELEMENTS
 ----------------------------------------------------------- */
 /* tooltip */
 .tooltip {
-	position:absolute; width:360px; /*height:224px;*/ z-index:1000000;
+	position:absolute; width:360px; /*height:224px;*/ z-index:10000;
 	background-color:#ffffff; border:1px solid #dbdad9; 
 	border:1px solid rgba(165,165,165,0.4);
 	-moz-box-shadow:-2px 3px 14px rgba(0, 0, 0, 0.4);
@@ -577,7 +577,7 @@ OTHER GLOBAL ELEMENTS
 
 /* modal */
 .modal {
-	display:none; z-index:10000; width:600px;
+	display:none; z-index:19999; width:600px;
 	background-color:#f3f2f1;
 	-moz-box-shadow: 0 0 40px rgba(0,0,0,0.25);
 	-webkit-box-shadow: 0 0 40px rgba(0,0,0,0.25);
@@ -884,7 +884,7 @@ PAGE-SPECIFIC STYLES
 .continent.project .west table.resources-list .resource-name { margin-left:40px; margin-right:0; font-size: 14px; line-height: 16px; }
 .continent.project .west table.resources-list .resource-name span span { height: 36px; }
 .continent.project .west table.doublewide .thumb .close { 
-	width: 7px; height: 7px; position: absolute; background: url(../images/control_close_7_sprite.png) 0px 0px no-repeat transparent; top: -3px; left: 132px; }
+	width: 7px; height: 7px; position: absolute; background: url(../images/control_close_7_sprite.png) 0px 0px no-repeat transparent; top: -3px; left: 132px; z-index:10001; }
 .continent.project .west table.doublewide .thumb .close:hover { background-position: 0 -7px; }
 
 
@@ -1207,8 +1207,8 @@ div.continent.home .headlands .splash .splash-inner.first { margin-right:300px; 
 	/* splash top area */
 div.continent.home .headlands .splash .top-pane { 
 	position: absolute; top: 18px; left: 20px; right: 20px; padding: 8px 10px 9px 10px; color: #3d3a36; z-index: 9999;
-	background-color: transparent; background: rgb(255, 255, 255); background: rgba(255, 255, 255, 0.5); overflow: visible;
-	}
+	background-color: transparent; background: rgb(255, 255, 255); background: rgba(255, 255, 255, 0.5);
+}
 div.continent.home .headlands .splash .top-pane .oops { position:absolute; z-index: 10000 ; top: 12px; right:132px; }
 	
 /* CONSOLE */
